<resources>
    <string name="person">人</string>
    <string name="yuan">元</string>
    <string name="search">搜索</string>
    <string name="city">城市</string>
    <string name="category">分类</string>
    <string name="sort">排序</string>
    <string name="details_title">商品详情</string>
    <string name="my_group_buy">我的优惠劵</string>
    <string name="about">关于</string>
    <string name="title_more">更多</string>
    <string name="contact_us">联系我们</string>
    <string name="version_name">软件版本：%1$s</string>
    <string name="official_website">官网地址：%1$s</string>
    <string name="weibo">官方微博：%1$s</string>
    <string name="login_merchant">商户登录</string>
    <string name="comment">意见反馈</string>
    <string name="buy">立即抢购</string>
    <string name="period_of_validity">有效期：%1$s前</string>
    <string name="to">至</string>
    <string name="version">2.3.0</string>
    <string name="version_des">版本号：V%s</string>
    <string name="catalog">分类</string>
    <string name="busiarea">商圈</string>
    <string name="tab_today">优惠</string>
    <string name="tab_near">附近</string>
    <string name="tab_order">订单</string>
    <string name="tab_setting">更多</string>
    <string name="error_no_network">无网络连接</string>
    <string name="error_no_data">数据错误，请稍后重试</string>
    <string name="location_fail">定位失败</string>
    <string name="locating">正在定位 …</string>
    <string name="navi_type_driving">驾车</string>
    <string name="navi_type_busline">公交</string>
    <string name="navi_type_walking">步行</string>
    <string name="navi_change_plan">换个方案</string>
    <string name="navi_show_map">查看地图</string>
    <string name="navi_show_plans">公交信息</string>
    <string name="price_rmb_symbol">￥</string>
    <string name="deal_status_sold_out">卖光</string>
    <string name="deal_status_ended">结束</string>
    <string name="deal_search_title">优惠搜索</string>
    <string name="deal_search_hint">搜索优惠</string>
    <string name="deal_search_loading">搜索中....</string>
    <string name="deal_search_not_found">没有搜索到您想要的信息</string>
    <string name="deal_distance_unknown">未知</string>
    <string name="deal_all_areas">全部商圈</string>
    <string name="deal_map_mode">优惠地图</string>
    <string name="i_guess_you_are_here">我们猜你在</string>
    <string name="deal_near_title">附近优惠</string>
    <string name="change_city">更换城市</string>
    <string name="continue_city">继续浏览</string>
    <string name="city_not_open_tips">该地区暂时没有地图信息，请耐心等待</string>
    <string name="deal_near_title_prefix">附近</string>
    <string name="no_near_deal">"附近没有优惠哦去今日优惠看看"</string>
    <string name="map_next_deal">换一个</string>
    <string name="map_prev_deal">上一个</string>
    <string name="loading">正在载入 …</string>
    <string name="exiting">正在退出 …</string>
    <string name="loading_fail_retry">数据加载失败，请</string>
    <string name="retry">重试</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="checkcode">请输入正确的5位验证码</string>
    <string name="login">登录</string>
    <string name="regist">注册</string>
    <string name="free_regist">免费注册</string>
    <string name="find_password">找回密码</string>
    <string name="more">点击加载更多</string>
    <string name="tips">提示</string>
    <string name="whether_exit">确定退出登录？</string>
    <string name="input_vecode">请输入手机验证码</string>
    <string name="input_phone_number_hint">请输入11位手机号码</string>
    <string name="input_password_hint">密码长度不能少于8位</string>
    <string name="confirm_password_hint">请再输入密码</string>
    <string name="confirm_password_error">两次密码输入不一致</string>
    <string name="i_agree">同意</string>
    <string name="registing">正在注册</string>
    <string name="regist_succ">注册成功</string>
    <string name="regist_active">激活</string>
    <string name="dd_phone">电话</string>
    <string name="dd_map">地图</string>
    <string name="dd_soldout">卖光啦</string>
    <string name="dd_draw">抽奖</string>
    <string name="dd_branch">分店信息</string>
    <string name="dd_consumer_tips">消费提示</string>
    <string name="dd_activity_detail">活动详情</string>
    <string name="dd_days_refund">支持随时退款</string>
    <string name="dd_days_refund_no">不支持随时退款</string>
    <string name="dd_expired_refund">支持过期退款</string>
    <string name="dd_expired_refund_no">不支持过期退款</string>
    <string name="dd_fore_refund">先行赔付</string>
    <string name="dd_fake_refund">假一赔一</string>
    <string name="dd_flash_post">闪电发货</string>
    <string name="dd_select_phone_title">请选择电话号码</string>
    <string name="search_hint">城市中文名称或拼音</string>
    <string name="return_text">返回</string>
    <string name="refresh">刷新</string>
    <string name="unused">未使用</string>
    <string name="expired">已过期</string>
    <string name="used">已使用</string>
    <string name="unshipped">未发货</string>
    <string name="shipped">已发货</string>
    <string name="unended">未开奖</string>
    <string name="ended">已开奖</string>
    <string name="lottery_succ">恭喜您，抽奖成功！</string>
    <string name="lotteried">抱歉，您已参加过本次抽奖</string>
    <string name="confirm_install_hint">安装提示</string>
    <string name="confirm_install">"为保证您的交易安全，需要您安装支付宝安全支付服务，才能进行付款。
        点击确定，立即安装。"
</string>
    <string name="Ensure">确定</string>
    <string name="Cancel">取消</string>
    <string name="back">返回</string>
    <string name="navigation">导航</string>
    <string name="share">分享</string>
    <string name="sending">发送中…</string>
    <string name="sending_fail_tips">发送失败，请稍后再试</string>
    <string name="auth_fail_tips">授权失败，请稍后再试</string>
    <string name="share_success">分享成功</string>
    <string name="share_already">您已经分享过了</string>
    <string name="validation_fails">验证失败</string>
    <string name="token_expired">验证过期，请重新登录</string>
    <string name="buy_title">购买</string>
    <string name="buy_no_login">您还没有登录</string>
    <string name="buy_one_txt">请至少买一样吧~</string>
    <string name="buy_error_num_txt">请输入正确的数量</string>
    <string name="buy_min_buy_txt">每人最少购买 %s件</string>
    <string name="buy_max_buy_txt">每人最多购买 %s件</string>
    <string name="buy_order_min_buy_txt">该订单最少购买 %s个</string>
    <string name="buy_order_max_buy_txt">该订单最少购买 %s个</string>
    <string name="buy_bind_phone">请绑定手机</string>
    <string name="binding_phone">绑定手机号码</string>
    <string name="buy_input_addr">请填写完整地址或者选择地址</string>
    <string name="buy_reading_info">正在读取购买信息</string>
    <string name="buy_confirm_info">正在确认订单信息</string>
    <string name="buy_invoice_money">发票费用:</string>
    <string name="buy_delivery_weekday">只工作日送货&lt;font color=#8d8d8d>(双休日、节假日不用送)(注：写字楼/商用地址客户请选择)&lt;/font></string>
    <string name="buy_delivery_weekend">只双休日、节假日送货 &lt;font color=#8d8d8d>(工作日不用送)&lt;/font></string>
    <string name="buy_delivery_price_free">运费:(￥%d以上免运费)</string>
    <string name="buy_delivery_count_free">运费:(%d件以上免运费)</string>
    <string name="buy_sold_out">%s:卖光了！</string>
    <string name="buy_sale_title">(最少购买%d件)</string>
    <string name="buy_sale_title2"> (最少购买%1$s件，最多购买%2$s件)</string>
    <string name="order_check_code_waiting">验证中，请稍后</string>
    <string name="order_check_code_request">正在获取验证码</string>
    <string name="order_check_code_succ">验证码已通过短信的方式发送到你手机，请输入该验证码</string>
    <string name="order_check_opt_cancel">操作已经取消</string>
    <string name="order_check_go_pay">去支付</string>
    <string name="order_check_submit">提交</string>
    <string name="recharge_balance_txt">账户余额：</string>
    <string name="recharge_money_txt">充值金额：</string>
    <string name="recharge_balance_hint">请关注您的充值金额是否超限</string>
    <string name="recharge_pay_zhifubao">支付宝客户端支付</string>
    <string name="recharge_pay_yinlian">支付宝网页支付</string>
    <string name="recharge_pay_china_mobile">中国移动手机支付</string>
    <string name="recharge_to_recharge">去充值</string>
    <string name="bind_phone_num">绑定手机</string>
    <string name="bind_phone_num_new">绑定新号码</string>
    <string name="bind_phone_vali_code">验证码：</string>
    <string name="bind_phone_vali_resend">若三分钟未收到验证码，请点击“重新发送”</string>
    <string name="bind_phone_free_vali_btn">获取验证码</string>
    <string name="bind_phone_vali_resend_btn">重新发送</string>
    <string name="bind_phone_receive_code_hint">请输入您接收到的6位验证码</string>
    <string name="mynuomi_account">账户</string>
    <string name="mynuomi_recharge">充值</string>
    <string name="mynuomi_transaction_records">交易记录</string>
    <string name="mynuomi_address_management">地址管理</string>
    <string name="mynuomi_my_vouchers">我的代金券</string>
    <string name="mynuomi_my_collections">我的收藏</string>
    <string name="mynuomi_logout">退出登录</string>
    <string name="transaction_no_data">您还没有优惠过</string>
    <string name="voucher_can_use">可使用的代金券</string>
    <string name="voucher_input_code">请输入优惠码</string>
    <string name="voucher_loading">正在获取代金券信息</string>
    <string name="setting_setting">设置</string>
    <string name="setting_overdue_remind">优惠过期提醒</string>
    <string name="setting_news_remind">每日新优惠提醒</string>
    <string name="setting_news_remind_time">提醒时间</string>
    <string name="setting_tuan_praise_remind">优惠评价提醒</string>
    <string name="setting_picture_show">仅WiFi下显示图片</string>
    <string name="setting_clear_picture_cache">清理缓存</string>
    <string name="setting_opinion">反馈意见</string>
    <string name="setting_agreement">用户服务协议</string>
    <string name="setting_help">帮助</string>
    <string name="setting_introduction">功能介绍</string>
    <string name="setting_cache_file_tip">计算大小 …</string>
    <string name="setting_clear_picture_proccessing">正在清理缓存…</string>
    <string name="setting_account_gift_count">%s张</string>
    <string name="setting_account_balance">余额</string>
    <string name="setting_account_save">共节省</string>
    <string name="setting_account_jifen">积分</string>
    <string name="get_voucher_remind_notification">您有%s张可使用的代金券</string>
    <string name="setting_collect_after_login">请登录后完成收藏</string>
    <string name="setting_synchronize_collect">登录后,可以同步收藏到所有移动设备</string>
    <string name="setting_cancel">待会再说</string>
    <string name="setting_login">现在登录</string>
    <string name="setting_qrcode">扫一扫</string>
    <string name="addr_no_data">"您还没有保存过地址"</string>
    <string name="addr_add_new">新增</string>
    <string name="addr_adding_new">新增地址</string>
    <string name="addr_adding_modify">编辑地址</string>
    <string name="addr_adding_remove_msg">您确认要删除当前地址吗？</string>
    <string name="addr_adding_save">保存</string>
    <string name="sina_weibo">新浪微博</string>
    <string name="qq_zone">QQ空间</string>
    <string name="sms">短信</string>
    <string name="verify_ticket">消费优惠券</string>
    <string name="partner_logout">注销商户登录</string>
    <string name="clean_cache">清空缓存</string>
    <string name="main_recommand">优惠</string>
    <string name="main_near_by">周边</string>
    <string name="main_coupon">优惠券</string>
    <string name="main_setting">设置</string>
    <string name="input_phone_hint">请输入11位手机号码</string>
    <string name="balance_payment">余额支付</string>
    <string name="union_payment">中国银联商务全民付</string>
    <string name="alipay_text">支付宝支付</string>
    <string name="tenpay_text">财付通支付</string>
    <string name="choose_pay_way">选择支付方式</string>
    <string name="check_out_text">结算信息</string>
    <string name="balance_text">余额：</string>
    <string name="total_price_text">总价:</string>
    <string name="need_pay_text">还需支付：</string>
    <string name="order_info">订单信息</string>
    <string name="product_name_text">名称：</string>
    <string name="product_price_text">单价：</string>
    <string name="product_count_text">数量：</string>
    <string name="consume_pay">确定支付</string>
    <string name="help">帮助</string>
    <string name="check_update">检查更新</string>
    <string name="make_call">拨打电话</string>
    <string name="input_code_hint">请输入5位验证码</string>
    <string name="call_format">请直接拨打电话024–74111222</string>
    <string name="cash_pay">货到付款</string>
    <string name="weixing_payment">微信支付</string>
    <string name="wei_chat">微信</string>
    <string name="wxcircle">朋友圈</string>
    <string name="tencent_weibo">腾讯微博</string>
    <string name="mu_support">技术支持</string>
    <string name="un_pay">中国银联支付</string>
</resources>