<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/my_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#eeeced">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/order_info"
                android:textSize="16sp"/>

        <View style="@style/DividerWider.Padding"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp">

            <TextView
                    android:id="@+id/endtime"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/product_name_text"
                    android:textSize="15sp"/>

            <TextView
                    android:id="@+id/productName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:singleLine="true"
                    android:textSize="15sp"/>
        </LinearLayout>

        <View style="@style/DividerNarrow.Padding"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp">

            <TextView
                    android:id="@+id/TextView01"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/product_price_text"
                    android:textSize="15sp"/>

            <TextView
                    android:id="@+id/priceTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="15sp"/>
        </LinearLayout>

        <View style="@style/DividerNarrow.Padding"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp">

            <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/product_count_text"
                    android:textSize="15sp"/>

            <TextView
                    android:id="@+id/goodsCountTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:textSize="15sp"/>
        </LinearLayout>

        <View style="@style/DividerNarrow.Padding"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="25dp"
                android:text="@string/check_out_text"
                android:textSize="16sp"/>

        <View style="@style/DividerWider.Padding"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:tag="@drawable/table_item_top">

            <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/balance_text"
                    android:textColor="@color/black"
                    android:textSize="15sp"/>

            <TextView
                    android:id="@+id/moneyTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="15sp"/>
        </LinearLayout>

        <View style="@style/DividerNarrow.Padding"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp">

            <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/total_price_text"
                    android:textSize="15sp"/>

            <TextView
                    android:id="@+id/totalPriceTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="15sp"/>
        </LinearLayout>

        <View style="@style/DividerNarrow.Padding"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp">

            <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/need_pay_text"
                    android:textSize="15sp"/>

            <TextView
                    android:id="@+id/paymentTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:textSize="15sp"/>
        </LinearLayout>

        <View style="@style/DividerNarrow.Padding"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="25dp"
                android:text="@string/choose_pay_way"
                android:textSize="16sp"/>

        <View style="@style/DividerWider.Padding"/>

        <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp">

            <RadioButton
                    android:id="@+id/balanceCheckBtn"
                    style="@style/CheckBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_balance_pay"
                    android:text="@string/balance_payment"
                    android:textSize="15sp"
                    android:visibility="gone"/>

            <RadioButton
                    android:id="@+id/un_pay"
                    style="@style/CheckBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_uppay"
                    android:text="@string/un_pay"
                    android:textSize="15sp"
                    android:visibility="gone"/>

            <RadioButton
                    android:id="@+id/alipay"
                    style="@style/CheckBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_alipay"
                    android:text="@string/alipay_text"
                    android:textSize="15sp"
                    android:visibility="gone"/>


            <RadioButton
                    android:id="@+id/wx_pay"
                    style="@style/CheckBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_weixinpay"
                    android:text="@string/weixing_payment"
                    android:textSize="15sp"
                    android:visibility="gone"/>

            <RadioButton
                    android:id="@+id/tencent_pay"
                    style="@style/CheckBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_tenpay"
                    android:text="@string/tenpay_text"
                    android:textSize="15sp"
                    android:visibility="gone"/>

            <RadioButton
                    android:id="@+id/unionPay"
                    style="@style/CheckBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_uppay"
                    android:text="@string/union_payment"
                    android:textSize="15sp"
                    android:visibility="gone"/>

            <RadioButton
                    android:id="@+id/cash_pay"
                    style="@style/CheckBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_balance_pay"
                    android:text="@string/cash_pay"
                    android:textSize="15sp"
                    android:visibility="gone"/>

        </RadioGroup>

        <Button
                android:id="@+id/paymentButton"
                style="@style/Button.Theme.Normal"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/consume_pay"/>
    </LinearLayout>

</ScrollView>