<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="20dp"
            android:textSize="20sp"
            android:text="@string/call_format"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal" >

        <Button
                android:id="@+id/call_button"
                style="@style/Button.Theme.Normal"
                android:layout_width="0dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:text="@string/make_call" />

        <Button
                android:id="@+id/cancel_button"
                style="@style/Button.Theme.Normal"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/Cancel" />
    </LinearLayout>
</LinearLayout>